src/components/side_panel/conditional_formatting/cf_preview/cf_preview.css
.o-spreadsheet {
  .o-cf-preview {
    &.o-cf-cursor-ptr {
      cursor: pointer;
    }

    height: 80px;
    padding: 10px;
    position: relative;
    cursor: pointer;
    &:hover,
    &.o-cf-dragging {
      background-color: var(--os-gray-200);
    }

    &:not(:hover) .o-cf-delete-button {
      display: none;
    }
    .o-cf-preview-icon {
      position: absolute;
      height: 50px;
      width: 50px;
      .o-icon {
        width: var(--os-cf-icon-edge-length);
        height: var(--os-cf-icon-edge-length);
      }
    }
    .o-cf-preview-description {
      left: 65px;
      margin-bottom: auto;
      margin-right: 8px;
      margin-top: auto;
      position: relative;
      width: 142px;
      .o-cf-preview-description-rule {
        margin-bottom: 4px;
        max-height: 2.8em;
        line-height: 1.4em;
      }
      .o-cf-preview-range {
        font-size: 12px;
      }
    }
    .o-cf-delete {
      left: 90%;
      top: 39%;
      position: absolute;
    }
    &:not(:hover):not(.o-cf-dragging) .o-cf-drag-handle {
      display: none !important;
    }
    .o-cf-drag-handle {
      left: -8px;
      cursor: move;
      .o-icon {
        width: 6px;
        height: 30px;
      }
    }

    .o-icon.arrow-down {
      color: var(--os-red-arrow-color);
    }
    .o-icon.arrow-up {
      color: var(--os-green-arrow-color);
    }
  }
}

